--- a/templates/home.html
+++ b/templates/home.html
@@ -1,11 +1,6 @@
+{% extends 'layout.html' %}
 
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Simple Flask based project</title>
-</head>
-<body>
-    <h1>My homepage</h1>
+{% block content %}
+    <h2>My homepage</h2>
     <p>This is a test website</p>
-  </body>
-</html>
+{% endblock %}
