--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,8 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-    <h2>My homepage</h2>
-    <p>This is a test website</p>
+	<div class="home">
+	    <h2>My homepage</h2>
+    	<p>This is a test website</p>		
+	</div>
 {% endblock %}
