--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,8 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-    <h2>My about</h2>
-    <p>This is a test website</p>
+	<div class="about">
+		<h2>My about</h2>
+    	<p>This is a test website</p>
+	</div>
 {% endblock %}
