--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,7 +2,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>Flask App</title>      
+      <title>Flask App</title>   
+      <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">   
   </head>
   <body>
     <header>
